fix overflow issue 2nd

--- a/docs/style.css
+++ b/docs/style.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
 }
 
+html,
 body {
     background-color: var(--white-color);
     font-family: 'Lato', sans-serif;
@@ -17,6 +18,8 @@ body {
     margin: 0;
     overflow-y: auto;
     overflow-x: hidden;
+    touch-action: none;
+    -ms-touch-action: none;
 }
 
 h1 {
